docs(readme): add --sun-misc-unsafe-memory-access=allow to the run command [skip ci]